2015-04-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forward_move_node_structure) <Up and Next>,
	(backward_move_node_structure) <Prev and down>: Clean up window
	history so to add only one node in history.  Report from Benno 
	Schulenberg.
	(backward_move_node_structure): Case-insensitive check for name 
	of (dir).

2015-04-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/texi2dvi: Comments changed.

2015-04-06  Sergey Poznyakoff  <gray@gnu.org>

	* util/texi2dvi (comment_iftex, uncomment_iftex): preserve @top
	node for first run to avoid makeinfo complaint.
	Mail to bug-texinfo, 02 Mar 2015 11:38:53 (and thread ff.,
	continuing into April).
	
2015-04-06  Eli Zaretskii  <eliz@gnu.org>

	* info/pcterm.c (w32_info_prep): Enable mouse input.
	(w32_kbd_read): Support mouse wheel events by scrolling display
	like mouse_event_handler does.

2015-04-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes) <--node>: Look through node 
	names of file for argument, and if not found look for a 
	case-insensitive initial match.
	* info/nodes.c (info_get_node_of_file_buffer): Remove doubled 
	condition.

2015-04-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Invoking install-info): Include ellipsis 
	within square brackets in synopsis.  Report from Benno 
	Schulenberg.

2015-04-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Not Ending a Sentence): no need for @:
	after @code.

	* util/srclist.txt: update slave build-aux/texinfo.tex
	(required by automake) from master doc/texinfo.

	* util/htmlxref.cnf (perl): add entry pointing to
	http://www.gnu.org/software/perl/manual.

2015-03-29  Patrice Dumas  <pertusus@free.fr>

	* autogen.sh, tp/maintain/regenerate_cmd_tests.sh, 
	tp/tests/Makefile.am, tp/tests/htmlxref*/Makefile.am, 
	tp/tests/parser_tests.sh, tp/tests/run_parser_all.sh: 
	avoid changing directory when running tests.  
	Arrange to be able to run tests directly in subdirectories 